<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_task"
        android:textAppearance="@style/TextStyle.Header5"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/taskInput"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.Header6"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:autofillHints="Do homework"
            android:hint="@string/new_task" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_marginStart="8dp"
            android:text="@string/save"
            android:textAppearance="@style/TextStyle.Header6"
            android:textColor="?attr/colorOnSurface"
            android:backgroundTint="?attr/colorSurface"/>

    </LinearLayout>

</LinearLayout>